use http-request lib instead of raw HttpURLConnection